@@ -1,5 +1,6 @@
 Version 2.02.80 - 
 ====================================
+  Add backtraces for archive and backup_locally in check_current_backup().
   Fix memory leak in debug mode of restart_clvmd() error path.
   Log error message for pthread_join() failure in clvmd.
 
